fix unnecessary scrollbars on inline code

--- a/style/luminous.css
+++ b/style/luminous.css
@@ -97,6 +97,9 @@
   *display: inline; /* IE6 hack. */
 }
 
+.luminous_inline .code_container {
+  overflow: auto!important;
+}
 
 
 .luminous .link, .link:visited {
